<resources>

    <string name="app_name">电子绘本</string>
    <string name="logintext">开始测试</string>
    <string name="logintitle">登录</string>
    <string name="name">姓名：</string>
    <string name="age">年龄：</string>
    <string name="id">ID：</string>
    <string name="device_familiarity">设备熟悉度：</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="name_hint">请输入你的名字</string>
    <string name="age_hint">请输入你的年龄</string>
    <string name="id_hint">请输入你的ID</string>
    <string name="familiarity_hint">请输入设备熟悉度</string>
    <string name="choosemodetitle">请选择测试类型</string>
    <string name="firstmodetext">听</string>
    <string name="secondmodetext">视+听</string>
    <string name="thirdmodetext">视+听+说</string>
    <string name="fourthmodetext">视+听+触</string>
    <string name="studytitle">学习阶段</string>
    <string name="testtext">在这里会播放学习阶段的内容，内容根据选择模式的不同会有不同，学习内容播放完之后，开始测试的按钮会呈现出来</string>
    <string name="onclicktitle">测试点击</string>
    <string name="passornot">是否通过测试</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="nextstage">进入下一阶段</string>
    <string name="clickquestion">请点击下面图片中最萌的丘比龙</string>
    <string name="movequestion">请把下面这幅图片从左边拖动到右边</string>
    <string name="zoomquestion">请将下面这幅图片先放大后缩小</string>
    <string name="testend">测试结束</string>
    <string name="showresult">测试结果</string>
    <string name="stagetitle">阶段</string>
    <string name="begintimetitle">开始时间</string>
    <string name="endtimetitle">结束时间</string>
    <string name="durationtitle">持续时间</string>
    <string name="passornottitle">是否通过测试</string>
    <string name="exittext">退出程序</string>
    <string name="booktitle">生气汤</string>
    <string name="speakingtitle">口述题</string>
    <string name="clicktitle">点击题</string>
    <string name="movetitle">拖拽题</string>
    <string name="zoomtitle">缩放题</string>
    <string name="righttitle">√</string>
    <string name="wrongtitle">×</string>
    <string name="question_seven">请把小狗移到下边</string>
    <string name="question_eight">请把霍斯移到下边</string>
    <string name="question_nine">请把汤锅移到下边</string>
	
    <string name="study_subtitle_0">霍斯今天有一箩筐不如意的事。</string>
    <string name="study_subtitle_1">他想不出第三题的答案。</string>
    <string name="study_subtitle_2">同学们说胖胖的琳达喜欢他。</string>
    <string name="study_subtitle_3">而且，妈妈居然找珍珠阿姨来接他回家。</string>
    <string name="study_subtitle_4">珍珠阿姨嗓门很大，而且开车横冲直撞，差点儿压死路上的贵宾狗。</string>
    <string name="study_subtitle_5">霍斯气得想打人！他用力踩了一朵花。</string>
    <string name="study_subtitle_6_0">妈妈问他：“今天好不好啊？”</string>
    <string name="study_subtitle_6_1">霍斯吼了一声。</string>
    <string name="study_subtitle_7_0">“我们来煮汤吧！”妈妈说。霍斯一动也不动。他正生气呢，才不想煮什么鬼汤。</string>
    <string name="study_subtitle_7_1">霍斯一动也不动。他正生气呢，才不想煮什么鬼汤。</string>
    <string name="study_subtitle_8">妈妈把锅子装满水放在炉子上。</string>
    <string name="study_subtitle_9">然后，她深深吸一口气，对着锅子尖叫。</string>
    <string name="study_subtitle_10_0">“该你啦！”她说。</string>
    <string name="study_subtitle_10_1">于是，霍斯爬上凳子，也对着锅子尖叫。</string>
    <string name="study_subtitle_11">霍斯吼吼吼了好几声，还对着锅子龇牙咧嘴。</string>
    <string name="study_subtitle_12">妈妈对着锅子吐舌头。</string>
    <string name="study_subtitle_13">霍斯也吐舌头，吐了二十下。</string>
    <string name="study_subtitle_14">他拿起汤勺乒乒乓乓地敲锅子</string>
    <string name="study_subtitle_15">然后，他笑了</string>
    <string name="study_subtitle_16">妈妈也笑了</string>
    <string name="study_subtitle_17">霍斯问：“我们到底在煮什么汤啊？”</string>
    <string name="study_subtitle_18">“生气汤。”妈妈回答。</string>
    <string name="study_subtitle_19_0">他们就这样肩并肩在一起， 把一天的不如意搅散在汤里。</string>
    <string name="study_subtitle_19_1">霍斯变快乐了。</string>
    
</resources>
