<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFCEE">
	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical">
			<TableLayout
	    		android:layout_width="400dp"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
	    		android:stretchColumns="0,1">
	    		<TableRow
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginBottom="20dp">
	        		<TextView
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:textColor="#000000"
	            		android:gravity="right"
	            		android:text="@string/name"
	            		android:textSize="20sp"
	            		android:layout_marginRight="3dp"/>
	        		<EditText
	            		android:id="@+id/name"
	            		android:inputType="text"
	            		android:maxLength="7"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:hint="@string/name_hint"
	            		android:textSize="20sp"
	            		android:background="@drawable/shadow"/>
	    		</TableRow>
	    		<TableRow
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginBottom="20dp">
	        		<TextView
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:textColor="#000000"
	            		android:gravity="right"	            		
	            		android:text="@string/age"
	            		android:textSize="20sp"
	            		android:layout_marginRight="3dp"/>
	        		<EditText
	            		android:id="@+id/age"
	            		android:inputType="number"
	            		android:maxLength="2"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:hint="@string/age_hint"
	            		android:textSize="20sp"
	            		android:background="@drawable/shadow"/>
	    		</TableRow>
	    		<TableRow
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginBottom="20dp">
	        		<TextView
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:textColor="#000000"
	            		android:gravity="right"	            		
	            		android:text="@string/id"
	            		android:textSize="20sp"
	            		android:layout_marginRight="3dp"/>
	        		<EditText
	            		android:id="@+id/id"
	            		android:inputType="text"
	            		android:maxLength="5"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:hint="@string/id_hint"
	            		android:textSize="20sp"
	            		android:background="@drawable/shadow"/>
	    		</TableRow>
	    		<TableRow
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginBottom="20dp">
	        		<TextView
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:textColor="#000000"
	            		android:gravity="right"	            		
	            		android:text="@string/device_familiarity"
	            		android:textSize="20sp"
	            		android:layout_marginRight="3dp"/>
	        		<EditText
	            		android:id="@+id/familiarity"
	            		android:inputType="number"
	            		android:maxLength="1"
	            		android:layout_width="match_parent"
	            		android:layout_height="wrap_content"
	            		android:hint="@string/familiarity_hint"
	            		android:textSize="20sp"
	            		android:background="@drawable/shadow"/>
	    		</TableRow>
	 		</TableLayout>
	    	<LinearLayout
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="center"
	        	android:layout_marginBottom="20dp"
	        	android:orientation="horizontal">
	            <RadioGroup
	                android:id="@+id/choosesex"
	                android:layout_height="wrap_content"
	            	android:layout_width="match_parent"
	                android:orientation="horizontal"
	                android:layout_gravity="center">
	                <RadioButton
	                    android:id="@+id/male"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginRight="25dp"
	                    android:text="@string/male"
	                    android:textColor="#000000"
	                    android:textSize="18sp"/>
	                <RadioButton
	                    android:id="@+id/female"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/female"
	                    android:textColor="#000000"
	                    android:textSize="18sp"/>
	            </RadioGroup>
	        </LinearLayout>
    		<Button
    			android:id="@+id/loginbutton"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:background="@drawable/shape_pink"
    			android:textColor="#FFFFFF"
    			android:textSize="22sp"
    			android:layout_gravity="center"
    			android:text="@string/logintext"/>
    	</LinearLayout>
	</FrameLayout>
</LinearLayout>
