<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCEE"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/top"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="9"
	    android:background="#FF4545"
	    android:orientation="vertical">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/showresult"
	        android:textColor="#FFFFFF"
	        android:textSize="22sp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_weight="2">
	<TextView
	    android:id="@+id/basicinformation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textColor="#000000"
	    android:textSize="20sp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="5dp"/>
	<TextView
	    android:id="@+id/testinformation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textColor="#000000"
	    android:textSize="20sp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="5dp"/>
	<LinearLayout
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	<TextView
	    android:layout_weight="8"
	    android:gravity="center"
	    android:text="@string/stagetitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:textSize="20sp"/>
	<TextView
	    android:id="@+id/begintimeitem"
	    android:layout_weight="7"
	    android:gravity="center"
	    android:text="@string/begintimetitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:textSize="20sp"/>
	<TextView
	    android:id="@+id/endtimetiem"
	    android:layout_weight="7"
	    android:gravity="center"
	    android:text="@string/endtimetitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:textSize="20sp"/>
	<TextView
	    android:id="@+id/duration"
	    android:layout_weight="7"
	    android:gravity="center"
	    android:text="@string/durationtitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:textSize="20sp"/>
	<TextView
	    android:id="@+id/passornotitem"
	    android:layout_weight="7"
	    android:gravity="center"
	    android:text="@string/passornottitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#000000"
	    android:textSize="20sp"/>
	</LinearLayout>
	<ListView
	    android:id="@+id/tabledetail"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:divider="@null"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="9"
	    android:gravity="right"
	    android:orientation="horizontal">
	<LinearLayout
	    android:id="@+id/exitlayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center">
	    <TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textColor="#FF4545"
    	    android:textSize="20sp"
    	    android:layout_marginRight="5dp"
    	    android:layout_gravity="center"
    	    android:text="@string/exittext"/>
    	<ImageView
    	    android:contentDescription="@null"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="10dp"
    	    android:layout_gravity="center"
    	    android:src="@drawable/arrow_right"/>
    </LinearLayout>
	</LinearLayout>
</LinearLayout>

