<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCEE"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/top"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="9"
	    android:background="#FF4545"
	    android:orientation="vertical">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/zoomtitle"
	        android:textColor="#FFFFFF"
	        android:textSize="22sp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"/>
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="2"
	    android:orientation="vertical">
	<TextView
	    android:id="@+id/topquestion"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/zoomquestion"
	    android:textSize="20sp"
	    android:textColor="#000000"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:layout_gravity="center"/>
	<FrameLayout
	    android:id="@+id/middle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <ImageView
	        android:contentDescription="@null"
	        android:id="@+id/zoomimage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/testpicture1"
	        android:layout_gravity="center"/>
	</FrameLayout>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/bottom"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="9"
    	android:orientation="horizontal">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:orientation="horizontal"
		    android:gravity="left">
    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textColor="#000000"
    	    android:textSize="20sp"
    	    android:layout_marginRight="10dp"
    	    android:layout_marginLeft="10dp"
    	    android:text="@string/passornot"
    	    android:layout_gravity="center"/>
    	<RadioGroup
    	    android:id="@+id/zoomgroup"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center">
    	    <RadioButton
    	        android:id="@+id/zoomyes"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginRight="10dp"
    	        android:textColor="#000000"
    	    	android:textSize="20sp"
    	        android:text="@string/yes"/>
    	    <RadioButton
    	        android:id="@+id/zoomno"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textColor="#000000"
    	    	android:textSize="20sp"
    	        android:text="@string/no"/>
    	</RadioGroup>
    	</LinearLayout>
    	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:orientation="horizontal"
		    android:gravity="right">
    		<LinearLayout
    	    	android:id="@+id/stagethreetoend"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_gravity="center"
    	    	android:orientation="horizontal">
    	    <TextView
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:textColor="#FF4545"
    	    	android:textSize="20sp"
    	    	android:layout_marginRight="3dp"
    	    	android:text="@string/testend"
    	    	android:layout_gravity="center"/>
    	    <ImageView
    	        android:contentDescription="@null"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginRight="10dp"
    	        android:src="@drawable/arrow_right"
    	        android:layout_gravity="center"/>
    	    </LinearLayout>
    	</LinearLayout>
    </LinearLayout>
    

</LinearLayout>
