<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCEE"
    android:orientation="vertical">
	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <LinearLayout
	    	android:layout_width="500dp"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center"
	    	android:orientation="vertical">
	    	<LinearLayout
	    	    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
	    		android:layout_marginBottom="30dp"
	    		android:orientation="horizontal">
	    	<Button
    			android:id="@+id/firstmodebutton"
    			android:gravity="center"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:background="@drawable/shape_pink"
    			android:textColor="#FFFFFF"
    			android:textSize="22sp"
    			android:layout_marginRight="40dp"
    			android:text="@string/firstmodetext"/>
	    	<Button
    			android:id="@+id/secondmodebutton"
    			android:gravity="center"
    			android:layout_width="150dp"
    			android:layout_height="wrap_content"
    			android:background="@drawable/shape_pink"
    			android:textColor="#FFFFFF"
    			android:textSize="22sp"
    			android:text="@string/secondmodetext"/>
	    	</LinearLayout>
	    	<LinearLayout
	    	    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
	    		android:orientation="horizontal">
<!-- 	    		<Button -->
<!--     				android:id="@+id/thirdmodebutton" -->
<!--     				android:gravity="center" -->
<!--     				android:layout_width="150dp" -->
<!--     				android:layout_height="wrap_content" -->
<!--     				android:background="@drawable/shape_pink" -->
<!--     				android:textColor="#FFFFFF" -->
<!--     				android:textSize="22sp" -->
<!--     				android:layout_marginRight="40dp" -->
<!--     				android:text="@string/thirdmodetext"/> -->
	    		<Button
    				android:id="@+id/fourthmodebutton"
    				android:gravity="center"
    				android:layout_width="150dp"
    				android:layout_height="wrap_content"
    				android:background="@drawable/shape_pink"
    				android:textColor="#FFFFFF"
    				android:textSize="22sp"
    				android:text="@string/fourthmodetext"/>
	    	</LinearLayout>
	    </LinearLayout>
	</FrameLayout>

</LinearLayout>
