<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCEE"
    android:orientation="vertical">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="9"
	    android:background="#FF4545"
	    android:orientation="vertical">
	    <TextView
	        android:id="@+id/teststageonclick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/onclicktitle"
	        android:textColor="#FFFFFF"
	        android:textSize="22sp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/clickquestion"
	    android:textSize="20sp"
	    android:textColor="#000000"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:layout_gravity="center"/>
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	    <LinearLayout
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1">
	        <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1">
			    <ImageView
			        android:contentDescription="@null"
			        android:id="@+id/testimage0"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:background="@drawable/testpicture0"/>
			</RelativeLayout>
			<RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1">
			    <ImageView
			        android:contentDescription="@null"
			        android:id="@+id/testimage1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:background="@drawable/testpicture1"/>
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_weight="1">
	        <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1">
			    <ImageView
			        android:contentDescription="@null"
			        android:id="@+id/testimage2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:background="@drawable/testpicture2"/>
			</RelativeLayout>
			<RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1">
			    <ImageView
			        android:contentDescription="@null"
			        android:id="@+id/testimage3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerInParent="true"
			        android:background="@drawable/testpicture3"/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	</LinearLayout>
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="9"
    	android:orientation="horizontal">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:orientation="horizontal"
		    android:gravity="left">
    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textColor="#000000"
    	    android:textSize="20sp"
    	    android:layout_marginRight="10dp"
    	    android:layout_marginLeft="10dp"
    	    android:text="@string/passornot"
    	    android:layout_gravity="center"/>
    	<RadioGroup
    	    android:id="@+id/clickgroup"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center">
    	    <RadioButton
    	        android:id="@+id/clickyes"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginRight="10dp"
    	        android:textColor="#000000"
    	    	android:textSize="20sp"
    	        android:text="@string/yes"/>
    	    <RadioButton
    	        android:id="@+id/clickno"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textColor="#000000"
    	    	android:textSize="20sp"
    	        android:text="@string/no"/>
    	</RadioGroup>
    	</LinearLayout>
    	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:orientation="horizontal"
		    android:gravity="right">
    		<LinearLayout
    		    android:id="@+id/stageonetostagetwo"
    		    android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:orientation="horizontal"
    	    	android:layout_gravity="center">
    	    <TextView
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:textColor="#FF4545"
    	    	android:textSize="20sp"
    	    	android:layout_marginRight="3dp"
    	    	android:layout_gravity="center"
    	    	android:text="@string/nextstage"/>
    	    <ImageView
    	        android:contentDescription="@null"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginRight="10dp"
    	        android:layout_gravity="center"
    	        android:src="@drawable/arrow_right"/>
    	    </LinearLayout>
    	</LinearLayout>
    </LinearLayout>

</LinearLayout>
